--- a/flight/package.json
+++ b/flight/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.52.1",
     "clsx": "^2.1.1",
+    "cookie": "^0.6.0",
     "framer-motion": "^11.3.28",
     "next": "14.2.5",
     "react": "^18",
@@ -18,6 +20,7 @@
     "tailwind-merge": "^2.5.2"
   },
   "devDependencies": {
+    "@types/cookie": "^0.6.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
