--- a/flight/package.json
+++ b/flight/package.json
@@ -15,17 +15,19 @@
     "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
-    "@tanstack/react-query": "^5.52.1",
+    "@tanstack/react-query": "^5.53.3",
     "axios": "^1.7.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cookie": "^0.6.0",
     "framer-motion": "^11.3.31",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.436.0",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-spinners": "^0.14.1",
     "styled-components": "^6.1.12",
@@ -35,6 +37,7 @@
   },
   "devDependencies": {
     "@types/cookie": "^0.6.0",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
