--- a/flight/package.json
+++ b/flight/package.json
@@ -15,6 +15,7 @@
     "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@tabler/icons-react": "^3.14.0",
     "@tanstack/react-query": "^5.53.3",
     "axios": "^1.7.5",
     "class-variance-authority": "^0.7.0",
