--- a/flight/package.json
+++ b/flight/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@tabler/icons-react": "^3.14.0",
     "@tanstack/react-query": "^5.53.3",
+    "@tanstack/react-query-devtools": "^5.54.0",
     "axios": "^1.7.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
