--- a/flight/package.json
+++ b/flight/package.json
@@ -27,10 +27,13 @@
     "lucide-react": "^0.436.0",
     "next": "14.2.5",
     "react": "^18",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18",
+    "react-grid-layout": "^1.4.4",
     "react-hook-form": "^7.53.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
+    "react-resizable": "^3.0.5",
     "react-spinners": "^0.14.1",
     "styled-components": "^6.1.12",
     "tailwind-merge": "^2.5.2",
@@ -42,7 +45,10 @@
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "^18",
+    "@types/react-grid-layout": "^1.3.5",
+    "@types/react-resizable": "^3.0.8",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
