--- a/flight/package.json
+++ b/flight/package.json
@@ -27,6 +27,7 @@
     "clsx": "^2.1.1",
     "cookie": "^0.6.0",
     "framer-motion": "^11.5.4",
+    "html2canvas-pro": "^1.5.8",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.436.0",
     "next": "14.2.5",
