--- a/flight/package.json
+++ b/flight/package.json
@@ -32,7 +32,7 @@
     "html2canvas-pro": "^1.5.8",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.436.0",
-    "next": "14.2.5",
+    "next": "^14.2.13",
     "react": "^18",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18",
@@ -42,6 +42,7 @@
     "react-icons": "^5.3.0",
     "react-resizable": "^3.0.5",
     "react-spinners": "^0.14.1",
+    "sharp": "^0.33.5",
     "styled-components": "^6.1.12",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
