--- a/flight/package.json
+++ b/flight/package.json
@@ -22,18 +22,20 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.3",
-    "@tabler/icons-react": "^3.15.0",
+    "@tabler/icons-react": "^3.19.0",
     "@tanstack/react-query": "^5.53.3",
     "@tanstack/react-query-devtools": "^5.54.0",
     "axios": "^1.7.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "cookie": "^0.6.0",
+    "cookie": "^1.0.1",
     "framer-motion": "^11.5.4",
     "html2canvas-pro": "^1.5.8",
+    "jose": "^5.9.4",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.436.0",
     "next": "^14.2.13",
+    "next-auth": "^5.0.0-beta.22",
     "react": "^18",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18",
@@ -43,6 +45,7 @@
     "react-icons": "^5.3.0",
     "react-resizable": "^3.0.5",
     "react-spinners": "^0.14.1",
+    "react-toastify": "^10.0.6",
     "sharp": "^0.33.5",
     "styled-components": "^6.1.12",
     "tailwind-merge": "^2.5.2",
